Added weather api, cleaned up files.

--- a/WebsiteProjectCarpetMart/Views/Account/Login.cshtml
+++ b/WebsiteProjectCarpetMart/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebsiteProjectCMart.ViewModels.AccountViewModel
+﻿@model WebsiteProjectCarpetMart.ViewModels.AccountViewModel
 @{
     ViewData["Title"] = "Account Login";
 }
