--- a/WebsiteProjectCarpetMart/Views/Account/RegisterAccount.cshtml
+++ b/WebsiteProjectCarpetMart/Views/Account/RegisterAccount.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebsiteProjectCMart.ViewModels.RegisterViewModel
+﻿@model WebsiteProjectCarpetMart.ViewModels.RegisterViewModel
 @{
     ViewData["Title"] = "Register Account";
 }
