--- a/WebsiteProjectCarpetMart/Views/Home/Weather.cshtml
+++ b/WebsiteProjectCarpetMart/Views/Home/Weather.cshtml
@@ -9,11 +9,11 @@
 		<div class="text-danger"></div>
 		<div class="form-group row">
 			<div class="col-1">
-				<label asp-for="name" class="control-label"></label>
+				<label asp-for="Name" class="control-label"></label>
 			</div>
 			<div class="col-2">
-				<input type="name" asp-for="name" class="form-control" />
-				<span asp-validation-for="name" class="text-danger"></span>
+				<input type="Name" asp-for="Name" class="form-control" />
+				<span asp-validation-for="Name" class="text-danger"></span>
 			</div>
 		</div>
 		<div class="form-group">
