--- a/WebsiteProjectCarpetMart/Views/Account/AddProfile.cshtml
+++ b/WebsiteProjectCarpetMart/Views/Account/AddProfile.cshtml
@@ -1,31 +1,31 @@
 ﻿@model WebsiteProjectCarpetMart.ViewModels.UserViewModel
 @{
-    ViewData["Title"] = "Edit Profile";
+    ViewData["Title"] = "Add Profile";
 }
-<h1>Edit your contact information.</h1>
+<h1>Add your contact information.</h1>
 
 <div class="container border" style="padding:25px">
-	<form asp-action="EditProfileButton" method="post">
+	<form asp-action="AddProfile" method="post">
 		<div class="text-danger" asp-validation-summary="ModelOnly"></div>
 		<div class="form-group">
 			<div class="col-3">
 				<label asp-for="FirstName" class="control-label"></label>
 			</div>
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="FirstName" asp-for="FirstName" class="form-control" />
 				<span asp-validation-for="FirstName" class="text-danger"></span>
 			</div>
 			<div class="col-3">
 				<label asp-for="MiddleName" class="control-label"></label>
 			</div>
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="MiddleName" asp-for="MiddleName" class="form-control" />
 				<span asp-validation-for="MiddleName" class="text-danger"></span>
 			</div>
 			<div class="col-3">
 				<label asp-for="LastName" class="control-label"></label>
 			</div>
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="LastName" asp-for="LastName" class="form-control" />
 				<span asp-validation-for="LastName" class="text-danger"></span>
 			</div>
@@ -34,35 +34,34 @@
 			<div class="col-3">
 				<label asp-for="AddressLine1" class="control-label"></label>
 			</div>
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="AddressLine1" asp-for="AddressLine1" class="form-control" />
 				<span asp-validation-for="AddressLine1" class="text-danger"></span>
 			</div>
 			<div class="col-3">
 				<label asp-for="AddressLine2" class="control-label"></label>
 			</div>
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="AddressLine2" asp-for="AddressLine2" class="form-control" />
-				<span asp-validation-for="AddressLine2" class="text-danger"></span>
 			</div>
 			<div class="col-3">
 				<label asp-for="City" class="control-label"></label>
 			</div>
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="City" asp-for="City" class="form-control" />
 				<span asp-validation-for="City" class="text-danger"></span>
 			</div>
 			<div class="col-3">
 				<label asp-for="State" class="control-label"></label>
 			</div>
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="State" asp-for="State" class="form-control" />
 				<span asp-validation-for="State" class="text-danger"></span>
 			</div>
 			<div class="col-3">
 				<label asp-for="Zip" class="control-label"></label>
 			</div>
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="Zip" asp-for="Zip" class="form-control" />
 				<span asp-validation-for="Zip" class="text-danger"></span>
 			</div>
@@ -71,14 +70,14 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="Phone" asp-for="Phone" class="form-control" />
 				<span asp-validation-for="Phone" class="text-danger"></span>
 			</div>
 			<div class="col-3">
 				<label asp-for="Email" class="control-label"></label>
 			</div>
-			<div class="col-3">
+			<div class="row-cols-6">
 				<input type="Email" asp-for="Email" class="form-control" />
 				<span asp-validation-for="Email" class="text-danger"></span>
 			</div>
