Added unit tests for project

--- a/WebsiteProjectCarpetMart/Views/Account/DeleteProfile.cshtml
+++ b/WebsiteProjectCarpetMart/Views/Account/DeleteProfile.cshtml
@@ -3,5 +3,5 @@
 }
 <div class="text-center">
     <h1 class="display-4">Your profile has been deleted.</h1>
-    <p>If you'd like to add it again you can go back your profile and resubmit your information.'</a>.</p>
+    <p>If you'd like to add it again you can go back your profile and resubmit your information.</p>
 </div>
