--- a/WebsiteProjectCarpetMart/Views/Account/Profile.cshtml
+++ b/WebsiteProjectCarpetMart/Views/Account/Profile.cshtml
@@ -50,7 +50,7 @@
             <div class="form-group">
                 <div class="row-col-1">
                     <a href="/Account/EditProfile" class="btn btn-primary">Edit Profile</a>
-                    <input type="submit" class="btn btn-danger" value="DELETE" formaction="DeleteProfile" />
+                    <a href="/Account/DeleteProfile" class="btn btn-danger">DELETE</a>
                 </div>
             </div>
         }
