--- a/WebsiteProjectCarpetMart/Views/Account/AddProfile.cshtml
+++ b/WebsiteProjectCarpetMart/Views/Account/AddProfile.cshtml
@@ -85,7 +85,7 @@
 		<br />
 		<div class="form-group">
 			<div class="row-col-1">
-				<input type="submit" class="btn btn-primary" value="Edit Profile" />
+				<input type="submit" class="btn btn-primary" value="Add Profile" />
 				<input type="submit" class="btn btn-danger" value="DELETE" formaction="Delete" />
 			</div>
 		</div>
