--- a/WebsiteProjectCarpetMart/Views/Account/EditProfile.cshtml
+++ b/WebsiteProjectCarpetMart/Views/Account/EditProfile.cshtml
@@ -87,7 +87,7 @@
 		<div class="form-group">
 			<div class="row-col-1">
 				<input type="submit" class="btn btn-primary" value="Edit Profile" />
-				<input type="submit" class="btn btn-danger" value="DELETE" formaction="Delete" />
+				<input type="button" class="btn btn-danger" value="DELETE" formaction="Delete" />
 			</div>
 		</div>
 	</form>
