Button description changed

--- a/WebsiteProjectCarpetMart/Views/Class/AddClass.cshtml
+++ b/WebsiteProjectCarpetMart/Views/Class/AddClass.cshtml
@@ -73,7 +73,7 @@
 		<br />
 		<div class="form-group">
 			<div class="row-col-1">
-				<input type="submit" class="btn btn-primary" value="Add Profile" />
+				<input type="submit" class="btn btn-primary" value="Add Class" />
 				<input type="submit" class="btn btn-danger" value="DELETE" formaction="Delete" />
 			</div>
 		</div>
